--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,14 @@ environment:
       solution_name: MiniBigInteger\MiniBigInteger.sln
       configuration: Release
       platform: x64
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      solution_name: MiniBigInteger\MiniBigInteger2019.sln
+      configuration: Release
+      platform: x86
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      solution_name: MiniBigInteger\MiniBigInteger2019.sln
+      configuration: Release
+      platform: x64
 
 matrix:
   fast_finish: false
